--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -10,7 +10,7 @@ blockquote { font-size: 100%; }
 .btn-muted { background-color: #eaeaea; }
 .full-page { width: 100vw !important; height: 100vh !important; }
 .full-width { width: 100% !important; }
-.restrict, .pagination { font-size: 80%; margin: 0; }
+.pagination { margin: 0; }
 .input-group { width: 100%; }
 .checkbox { display: inline-block; font-weight: normal; }
 .form-body { padding-top: 1em; background: #f9f9f9; }
@@ -222,3 +222,6 @@ slider div.handle:after, [slider] div.handle:after { width: 0px; height: 0px; }
 }
 
 .record-list, .record-view { box-shadow: 0px 2px 2px #A0A0A0; }
+
+.restrict-description { font-size: 80%; margin: 0; }
+.restrict-add { display: table; width: 100%; }
