--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -28,6 +28,11 @@ blockquote { font-size: 100%; }
 .col-slim { padding-left: 0px; padding-right: 0px; }
 .nopadding { padding: 0px; }
 .tooltip-inner { width: 350px; }
+.top-left { position: absolute; top: 0px; left: 0px; }
+.top-right { position: absolute; top: 0px; right: 0px; }
+.bottom-left { position: absolute; bottom: 0px; left: 0px; }
+.bottom-right { position: absolute; bottom: 0px; right: 0px; }
+
 textarea.note {
   border-radius:0px;
   resize:none;
