--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -16,6 +16,7 @@ blockquote { font-size: 100%; }
 .form-body { padding-top: 1em; }
 .form-horizontal .form-group { margin-right: -5px; margin-bottom: 0px; padding-bottom: 15px; }
 .form-footer { padding: 1em; }
+.footer-total{ line-height: 2.42857; }
 .spacer { margin: 0.5em; content: "&nbsp;" }
 .vertical-spacer { margin-top: 0.5em; margin-bottom: 0.5em; }
 .horizontal-spacer { margin-left: 0.5em; margin-right: 0.5em; }
