--- a/aux/theme/theme1.css
+++ b/aux/theme/theme1.css
@@ -71,7 +71,7 @@ fieldset[disabled] .btn-primary.active,
 
 /* info colours */
 a, .text-info {
-  color: #5bc0de;
+  color: #359a92;
 }
 a.text-info:hover,
 a.text-info:focus {
