--- a/aux/theme/theme2.css
+++ b/aux/theme/theme2.css
@@ -71,7 +71,7 @@ fieldset[disabled] .btn-primary.active,
 
 /* info colours */
 a, .text-info {
-  color: #5be9de;
+  color: #35c392;
 }
 a.text-info:hover,
 a.text-info:focus {
