--- a/aux/theme/theme3.css
+++ b/aux/theme/theme3.css
@@ -71,7 +71,7 @@ fieldset[disabled] .btn-primary.active,
 
 /* info colours */
 a, .text-info {
-  color: #84c0de;
+  color: #5e9a92;
 }
 a.text-info:hover,
 a.text-info:focus {
