Working on utilities

--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -245,7 +245,7 @@ slider div.handle:after, [slider] div.handle:after { width: 0px; height: 0px; }
   margin: -6px;
 }
 
-.record-list, .record-view { box-shadow: 0px 2px 2px #A0A0A0; }
+.record-list, .record-view, .utility-view { box-shadow: 0px 2px 2px #A0A0A0; }
 
 .restrict-description { font-size: 80%; margin: 0; }
 .restrict-add { display: table; width: 100%; }
