--- a/aux/theme/theme2.css
+++ b/aux/theme/theme2.css
@@ -74,8 +74,12 @@ a, .text-info {
   color: #35c392;
 }
 a.text-info:hover,
-a.text-info:focus {
-  color: #4cdac0;
+a.text-info:focus,
+.navbar-link:focus,
+.navbar-link:hover,
+.navbar-brand:focus,
+.navbar-brand:hover {
+  color: #4cdac0 !important; /* important required by navbar */
 }
 .bg-info,
 .table > thead > tr > td.info,
