CSS: Removing underlines from anchors

--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -4,8 +4,9 @@ thead td, tbody td, tfoot, .collapsed-footer { text-align: center; }
 td { border: 0px !important; }
 td.tiny { width: 1px; white-space: nowrap; }
 option[disabled="disabled"] { color: #ccc; }
-.collapsed-footer { padding: 8px; }
 blockquote { font-size: 100%; }
+a { text-decoration: none !important; }
+.collapsed-footer { padding: 8px; }
 .panel { border-radius: 6px; }
 .btn { font-weight: bold; }
 .btn-narrow { padding-left: 6px; padding-right: 6px; }
