--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -59,6 +59,7 @@ iframe { padding: 0px; margin: 0px; border: 0px; }
 .no-line-height { line-height: 0px; }
 .bg-white { background-color: #fff; }
 .btn-header { border-radius: 6px; margin-right: -5px !important; margin-left: 0px !important; }
+.calendar-event-cancelled { text-decoration: line-through !important; }
 .working {
   background-image: linear-gradient(
     45deg,
