--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -28,6 +28,8 @@ iframe { padding: 0px; margin: 0px; border: 0px; }
 .spacer { margin: 0.5em; content: " " }
 .vertical-spacer { margin-top: 0.5em; margin-bottom: 0.5em; }
 .horizontal-spacer { margin-left: 0.5em; margin-right: 0.5em; }
+.striped { background-color: #f9f9f9; }
+.hover { background-color: #f5f5f5; }
 .alert-header {
   position: absolute;
   top: 0px;
