--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -44,6 +44,14 @@ iframe { padding: 0px; margin: 0px; border: 0px; }
   50%  { opacity: 1; }
   100% { opacity: 0; }
 }
+.alert-text {
+  animation: pulse-alert-text 1.5s infinite;
+}
+@keyframes pulse-alert-text {
+  0% { color: white; }
+  50% { color: yellow; }
+  100% { color: white; }
+}
 .rounded, .rounded-top, .rounded-bottom, .rounded-left, .rounded-right {
   border-radius: 6px !important;
 }
@@ -256,6 +264,7 @@ tfoot, .modal-footer {
   line-height: 20px;
   background-color: inherit;
 }
+.navbar-alert { color: yellow; }
 
 /* navbar tweaks */
 .navbar-header { background-color: transparent; }
