--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -30,6 +30,7 @@ iframe { padding: 0px; margin: 0px; border: 0px; }
 .horizontal-spacer { margin-left: 0.5em; margin-right: 0.5em; }
 .striped { background-color: #f9f9f9; }
 .hover { background-color: #f5f5f5; }
+.highlight { background-color: #fcf8e3 !important; font-weight: bold !important; }
 .alert-header {
   position: absolute;
   top: 0px;
