--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -310,8 +310,6 @@ tfoot, .modal-footer {
 
 .timepicker { padding-top: 1em; }
 .timepicker-row { height: 2em; }
-slider, [slider] { margin: 0px; }
-slider div.handle:after, [slider] div.handle:after { width: 0px; height: 0px; }
 
 .noselect {
   -webkit-touch-callout: none;
@@ -402,3 +400,61 @@ slider div.handle:after, [slider] div.handle:after { width: 0px; height: 0px; }
   top: 20px;
   bottom: 0;
 }
+
+/* cn-slider */
+cn-slider, [cn-slider] {
+  display: inline-block;
+  position: relative;
+  height: 7px;
+  width: 100%;
+  margin: 0px;
+  vertical-align: middle;
+}
+cn-slider div, [cn-slider] div {
+  white-space: nowrap;
+  position: absolute;
+}
+cn-slider div.bar, [cn-slider] div.bar {
+  width: 100%;
+  height: 100%;
+  border-radius: 7px;
+  background: #444;
+  overflow: hidden;
+}
+cn-slider div.bar .selection, [cn-slider] div.bar .selection {
+  width: 0%;
+  height: 100%;
+  background: #13b6ff;
+}
+cn-slider div.handle, [cn-slider] div.handle {
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  top: -8px;
+  background-color: #fff;
+  border: 1px solid #000;
+  z-index: 2;
+  border-radius: 100%;
+}
+cn-slider div.handle:after, [cn-slider] div.handle:after {
+  content: '';
+  background-color: #777;
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  border-radius: 100%;
+}
+cn-slider div.handle:after:hover, [cn-slider] div.handle:after:hover { background-color: #000; }
+cn-slider div.handle.active:after, [cn-slider] div.handle.active:after { background-color: #f00; }
+cn-slider div.bubble, [cn-slider] div.bubble {
+  display: none;
+  cursor: default;
+  top: -22px;
+  padding: 1px 3px 1px 3px;
+  font-size: 0.7em;
+  font-family: sans-serif;
+}
+cn-slider div.bubble.active, [cn-slider] div.bubble.active { display: inline-block; }
+cn-slider div.bubble.limit, [cn-slider] div.bubble.limit { color: #777; }
